# Nakliyat-ghadeer1

./: .replit  all-operations.html  client-account.html  client-statement.html  client.html  drivers.html  expenses.html  general-statement.html  home.html  index.html  models.py  notes.html  package.json  payments.html  pdf-server.js  pyproject.toml  replit.md  replit.nix  server.py
assets/css/: mobile.css  theme.css
assets/js/: ghadeer-db.js
attached_assets/: Pasted--DOCTYPE-html-html-lang-ar-dir-rtl-head-meta-charset-UT_1769236141730.txt  Pasted--DOCTYPE-html-html-lang-ar-dir-rtl-head-meta-charset-UT_1769236670061.txt  Pasted--const-executablePath-process-env-PUPPETEER-EXECUTABLE-_1769280316627.txt  Pasted--tbody-tr-td-1-td-td-contenteditable-true-td-td-content_1769236858760.txt  Pasted-const-express-require-express-const-puppeteer-require-p_1769278590128.txt  Pasted-import-os-import-io-from-flask-import-Flask-request-jso_1769188835815.txt
scripts/: post-merge.sh
