[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "python-bidi>=0.6.7",
    "reportlab>=4.4.9",
    "sqlalchemy>=2.0.45",
]
